--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "webpack serve --mode development",
     "pro": "webpack --mode production"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["React-Leaflet", "Webpack", "TypeScript", "React", "Leaflet", "Redux-Toolkit", "Font Awesome"],
+  "author": "Craig Johnson",
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
